# eigenradiomics

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml
api/batch_effects/: index.html
api/clinical/: index.html
api/feature_models/: index.html
api/ingestion/: index.html
api/package/: index.html
api/plotting/: index.html
api/preprocessing/: index.html
api/reducers/: index.html
api/reproducibility/: index.html
api/utils/: index.html
changelog/: index.html
changelog.d/: README.md  analysis-metadata-columns.fixed.md  batch-effects-catalog.fixed.md  batch-effects-robustness.fixed.md  bootstrap-icc-vectorized.changed.md  clinical-encoding-and-index.fixed.md  clustered-heatmap.added.md  combat-harmonizer.added.md  docs-overhaul.changed.md  end-to-end-example.added.md  feature-models.added.md  feature-score-selector.added.md  heatmap-bottom-bars.added.md  heatmap-corner-colorbars.changed.md  heatmap-corr-panel.added.md  heatmap-top-strips.added.md  ingestion-layer.added.md  module-trait-associations.added.md  pictologics-loader.added.md  plotting-input-validation.fixed.md  prep-cross-type-and-constant.fixed.md  prep-feature-validation.fixed.md  reduction-artifacts.added.md  repro-plot-empty.fixed.md  reproducibility-fisher-mean.changed.md  reproducibility-icc-column.changed.md  reproducibility-statistics.fixed.md  robustness-guards.changed.md  wgcna-include-grey.fixed.md  wgcna-njobs-validation.changed.md
dev/: WORKFLOW_GUIDE.md  check_estimators.py  debug_check_estimator.py  generate_doc_figures.py  generate_docs.py  pre_push.py  test_sk_compat.py
docs/: changelog.md  index.md  license.md  quality.md
docs/api/: batch_effects.md  clinical.md  feature_models.md  ingestion.md  package.md  plotting.md  preprocessing.md  reducers.md  reproducibility.md  utils.md
docs/reducers/: index.md  pca.md  wgcna.md
docs/user_guide/: batch_effects.md  best_practices.md  clustered_heatmap.md  data_ingestion.md  downstream_analysis.md  embeddings.md  end_to_end.md  feature_models.md  harmonization.md  input_data_model.md  installation.md  pipelines_and_grid_search.md  quick_start.md  radiomics_preprocessing.md  recipes.md  reproducibility.md  scalability.md  troubleshooting.md
eigenradiomics/: __init__.py  _excel.py  _features.py  _plotting.py  _stats.py  _utils.py  analysis.py  artifacts.py  batch_effects.py  catalog.py  clinical.py  dataset.py  feature_models.py  ingest.py  pictologics.py  plotting.py  reproducibility.py
eigenradiomics/preprocessing/: __init__.py  _feature_remover.py  _harmonize.py  _prep.py  _score_selector.py
eigenradiomics/reducers/: __init__.py  _base.py  _embeddings.py  _pca.py  _wgcna.py  _wgcna_utils.py
examples/: end_to_end.py
license/: index.html
overrides/: main.html
quality/: index.html
reducers/: index.html
reducers/pca/: index.html
reducers/wgcna/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  test_analysis.py  test_artifacts.py  test_batch_effects.py  test_catalog.py  test_clinical.py  test_dataset.py  test_embeddings.py  test_feature_models.py  test_harmonize.py  test_ingest.py  test_pca_reducer.py  test_pictologics.py  test_plotting.py  test_preprocessing.py  test_reproducibility.py  test_score_selector.py  test_stats.py  test_utils.py  test_wgcna_internals.py  test_wgcna_reducer.py
user_guide/batch_effects/: index.html
user_guide/best_practices/: index.html
(+16 files in other folders)
